Update page title for portfolio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Developer - Futuristic  Portfolio</title>
+    <title>Next-Gen Developer - Futuristic  Portfolio</title>
     <meta name="description" content="Professional Laravel developer creating next-generation web applications with cutting-edge design and elegant code. Specializing in full-stack development, APIs, and modern web technologies." />
     <meta name="author" content="Laravel Developer" />
     <meta name="keywords" content="Laravel Developer, PHP Developer, Full Stack Developer, Web Development, API Development, Modern Web Apps" />
